src/cloudknot/templates/yml/pars-with-default-vpc.template
AWSTemplateFormatVersion: "2010-09-09"
Description: 'Cloudknot PARS AWS CloudFormation Template: This template contains IAM roles and a security group. It also references the input default VPC and subnets.'
Parameters:
  BatchServiceRoleName:
    Type: String
    Default: cloudknot-batch-service-role
    Description: Name of the batch service IAM role. Default is cloudknot-batch-service-role.
    MinLength: "1"
    MaxLength: "64"
    ConstraintDescription: The role name must be between 1 and 64 characters
  EcsInstanceRoleName:
    Type: String
    Default: cloudknot-ecs-instance-role
    Description: Name of the ECS instance IAM role. Default is cloudknot-ecs-instance-role.
    MinLength: "1"
    MaxLength: "64"
    ConstraintDescription: The role name must be between 1 and 64 characters
  SpotFleetRoleName:
    Type: String
    Default: cloudknot-spot-fleet-role
    Description: Name of the spot fleet IAM role. Default is cloudknot-spot-fleet-role.
    MinLength: "1"
    MaxLength: "64"
    ConstraintDescription: The role name must be between 1 and 64 characters
  VpcId:
    Type: String
    Description: VPC ID for the default VPC.
    MinLength: "1"
    MaxLength: "255"
    ConstraintDescription: The VPC ID must be between 1 and 255 characters
  Subnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: The list of SubnetIds in your default Virtual Private Cloud (VPC)
    ConstraintDescription: Must be a list of existing subnets associated with different availability zones. They should be residing in the Virtual Private Cloud provided in the parameter VpcId.
  SecurityGroupDescription:
    Type: String
    Default: This security group was automatically generated by cloudknot.
    Description: Description of the security group. Default is 'This secutiry group was automatically generated by cloudknot'
    MinLength: "1"
    MaxLength: "255"
    ConstraintDescription: The security group description must be between 1 and 255 characters
  IamPolicies:
    Type: CommaDelimitedList
    Description: List of policies to attach to the ECS Instance Role
    ConstraintDescription: Must be a list of existing IAM policies.
Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:
        Ref: SecurityGroupDescription
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
  BatchServiceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Ref: BatchServiceRoleName
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: batch.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole
  IamInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: EcsInstanceRole
  EcsInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Ref: EcsInstanceRoleName
      AssumeRolePolicyDocument:
        Version: "2008-10-17"
        Statement:
          - Sid: ""
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        Fn::Split:
          - ','
          - Fn::Join:
              - ','
              - - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
                - Fn::Join:
                    - ','
                    - Ref: IamPolicies
  SpotFleetRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Ref: SpotFleetRoleName
      AssumeRolePolicyDocument:
        Version: "2008-10-17"
        Statement:
          - Sid: ""
            Effect: Allow
            Principal:
              Service: spotfleet.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2SpotFleetTaggingRole
Outputs:
  BatchServiceRole:
    Description: Batch Service Role ARN
    Value:
      Fn::GetAtt:
        - BatchServiceRole
        - Arn
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-BatchServiceRole
  EcsInstanceRole:
    Description: ECS Instance Role ARN
    Value:
      Fn::GetAtt:
        - EcsInstanceRole
        - Arn
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-EcsInstanceRole
  InstanceProfile:
    Description: ECS Instance Profile ARN
    Value:
      Fn::GetAtt:
        - IamInstanceProfile
        - Arn
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-InstanceProfile
  SpotFleetRole:
    Description: Spot Fleet Role ARN
    Value:
      Fn::GetAtt:
        - SpotFleetRole
        - Arn
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SpotFleetRole
  VpcId:
    Description: VPC ID
    Value:
      Ref: VpcId
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-VpcId
  SubnetIds:
    Description: Comma delimited list of subnet IDs
    Value:
      Fn::Join:
        - ','
        - Ref: Subnets
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SubnetIds
  SecurityGroupId:
    Description: Security Group ID
    Value:
      Fn::GetAtt:
        - SecurityGroup
        - GroupId
    Export:
      Name:
        Fn::Sub: ${AWS::StackName}-SecurityGroupId
